# shadownet-defence

./: .dockerignore  .gitignore  BLOG_POST.md  Dockerfile  LICENSE  README.md  agent.py  client.py  data.py  environment.py  eval_harness.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
artifacts/: eval_summary.json  eval_summary.md
artifacts/shadownet-sft-adapter/: adapter_config.json  trainer_state.json
data/: attacker_profiles.yaml  scenarios_train.yaml
notebooks/: ShadowNet_SFT_Colab.ipynb
scripts/: demo_attacker.py  eval_baseline.py  eval_trained.py  fix_notebook.py  verify_core.py
server/: __init__.py  app.py  index.html  requirements.txt
tests/: test_behaviors.py  test_scenarios_yaml.py  test_training_modules.py
training/: build_sft_dataset.py  eval_baseline.json  eval_baseline_table.md  prompts.py  reward_adapter.py
